Changed button from div tag to button tag and fixed some layout issues

--- a/scss/_home__rwd.scss
+++ b/scss/_home__rwd.scss
@@ -78,6 +78,9 @@
         width: 80%;
         margin: 0 auto;
       }
+      & .l-tools__filter__list ul li {
+        margin-bottom: 5px;
+      }
     }
   }
   .l-site-map {
